# EventSystem

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: event_system.hpp
single_include/: event_system.hpp
tests/: CMakeLists.txt  main.cpp
